Update 'ycbwixgrt-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-3012e39780.u7ya.p3.openshiftapps.com/rhtap/rhtap-qe:8136120014044c6793dc8ed855cbdc6ba6ae989d@sha256:23d9e16188430b11eed2a3210baf10829c4a46345c44f4e3787e0149b08ba3b6

--- a/components/ycbwixgrt-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/ycbwixgrt-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ycbwixgrt-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-3012e39780.u7ya.p3.openshiftapps.com/rhtap/rhtap-qe:8136120014044c6793dc8ed855cbdc6ba6ae989d@sha256:23d9e16188430b11eed2a3210baf10829c4a46345c44f4e3787e0149b08ba3b6
+          name: container-image
